--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,41 @@
+# Python virtual environments
 .venv/
+venv/
+ENV/
+env/
+
+# Python cache files
 __pycache__/
-*.pyc
-.DS_Store
+*.py[cod]
+*$py.class
+*.so
+.Python
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+
+# IDE and editor files
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Project-specific
+cron-logs/*
+!cron-logs/.gitkeep
+screenshots/*
+!screenshots/.gitkeep
 stack.env
 docker-compose-local.yml
+
+# Logs
+*.log
