added email notifications

--- a/env.template
+++ b/env.template
@@ -5,4 +5,10 @@ DISCORD_WEBHOOK=https://discord.com/api/webhooks/your_webhook_here
 CALLMEBOT_ENABLED=false
 CALLMEBOT_PHONE=
 CALLMEBOT_APIKEY=
+EMAIL_ENABLED=false
+EMAIL_SMTP_SERVER=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_SENDER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_RECIPIENT=recipient@example.com
 SCREENSHOTS_ENABLED=false
